fix: fix filter order