@@ -348,6 +348,7 @@ public class SellerServiceImpl implements SellerService {
                         .status(item.getStatus())
                         .build())
                 .toList();
+
     }
 
     private List<ViewFlowerListForSellerResponse.Image> viewImageList(List<FlowerImage> imageList) {
@@ -673,7 +674,7 @@ public class SellerServiceImpl implements SellerService {
 
     @Override
     public FilterOrderResponse filterOrderAPI(FilterOrderRequest request) {
-        Account account = Role.getCurrentLoggedAccount(request.getAccountId(), accountRepo);
+        Account account = Role.getCurrentLoggedAccount(request.getSellerId(), accountRepo);
         if (account == null || !Role.checkIfThisAccountIsSeller(account)) {
             return FilterOrderResponse.builder()
                     .status("400")
@@ -692,26 +693,18 @@ public class SellerServiceImpl implements SellerService {
 
 
     private Object filterOrderLogic(FilterOrderRequest request) {
-        Account account = accountRepo.findById(request.getAccountId()).orElse(null);
-        assert account != null;
+        Seller seller = sellerRepo.findById(request.getSellerId()).orElse(null);
         Map<String, String> error = FilterOrderValidation.validate(request);
         if (!error.isEmpty()) {
             return error;
         }
-
-        List<Order> orders = getOrdersBySeller(account.getUser().getSeller().getId());
-        assert !orders.isEmpty();
+        assert seller != null;
+        List<Order> orders = getOrdersBySeller(seller.getId());
 
         if (request.getStatus() != null && !request.getStatus().isEmpty()) {
             orders = orders.stream()
                     .filter(order -> order.getStatus().equalsIgnoreCase(request.getStatus()))
-                    .collect(Collectors.toList());
-        }
-
-        if (request.getCreatedDate() != null) {
-            orders = orders.stream()
-                    .filter(order -> order.getCreatedDate().getMonth().equals(request.getCreatedDate().getMonth()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         List<FilterOrderResponse.OrderBill> orderBills = orders.stream()
@@ -763,6 +756,34 @@ public class SellerServiceImpl implements SellerService {
                 .collect(Collectors.toList());
     }
 
+    //----------------------------------SORT ORDER BY CREATE DATE-------------------------------------//
+
+    @Override
+    public String sortOrder(FilterOrderRequest filterOrderRequest, HttpSession session, Model model) {
+        model.addAttribute("msg", sortOrderLogic(filterOrderRequest));
+        return "viewOrderList";
+    }
+
+    @Override
+    public SortOrderResponse sortOrderAPI(FilterOrderRequest filterOrderRequest) {
+        return sortOrderLogic(filterOrderRequest);
+    }
+
+    private SortOrderResponse sortOrderLogic(FilterOrderRequest filterRequest) {
+        FilterOrderResponse response = (FilterOrderResponse) filterOrderLogic(filterRequest);
+        List<FilterOrderResponse.OrderBill> orders = new ArrayList<>(response.getOrderList());
+        if ("asc".equalsIgnoreCase(filterRequest.getSortDirection())) {
+            orders.sort(Comparator.comparing(FilterOrderResponse.OrderBill::getCreateDate));
+        } else if ("desc".equalsIgnoreCase(filterRequest.getSortDirection())) {
+            orders.sort(Comparator.comparing(FilterOrderResponse.OrderBill::getCreateDate).reversed());
+        }
+
+        return SortOrderResponse.builder()
+                .status("200")
+                .message("Sort order successfully")
+                .orderList(orders)
+                .build();
+    }
 
     //-------------------------------------------------VN PAY----------------------------------------//
 
@@ -954,35 +975,7 @@ public class SellerServiceImpl implements SellerService {
         return null;
     }
 
-    //----------------------------------SORT ORDER BY CREATE DATE-------------------------------------//
 
-    @Override
-    public String sortOrder(FilterOrderRequest filterOrderRequest, SortOrderRequest sortOrderRequest, HttpSession session, Model model) {
-        model.addAttribute("msg", sortOrderLogic(filterOrderRequest, sortOrderRequest));
-        return "viewOrderList";
-    }
-
-    @Override
-    public SortOrderResponse sortOrderAPI(FilterOrderRequest filterOrderRequest, SortOrderRequest sortOrderRequest) {
-        return sortOrderLogic(filterOrderRequest, sortOrderRequest);
-    }
-
-    private SortOrderResponse sortOrderLogic(FilterOrderRequest filterRequest, SortOrderRequest sortRequest) {
-        FilterOrderResponse response = (FilterOrderResponse) filterOrderLogic(filterRequest);
-        List<FilterOrderResponse.OrderBill> orders = response.getOrderList();
-
-        if ("asc".equalsIgnoreCase(sortRequest.getSortDirection())) {
-            orders.sort(Comparator.comparing(FilterOrderResponse.OrderBill::getCreateDate));
-        } else if ("desc".equalsIgnoreCase(sortRequest.getSortDirection())) {
-            orders.sort(Comparator.comparing(FilterOrderResponse.OrderBill::getCreateDate).reversed());
-        }
-
-        return SortOrderResponse.builder()
-                .status("200")
-                .message("Sort order successfully")
-                .orderList(orders)
-                .build();
-    }
 
     //------------------------------UPDATE FLOWER------------------------------------------//
 
